@@ -61,10 +61,10 @@ Download::Download(UserConnection& conn, QueueItem& qi, bool supportsTrees) thro
 		}
 		
 		if(qi.isSet(QueueItem::FLAG_RESUME)) {
+#ifdef PORT_ME
 			const string& target = (getTempTarget().empty() ? getPath() : getTempTarget());
 			int64_t start = File::getSize(target);
 
-#ifdef PORT_ME
 			// Only use antifrag if we don't have a previous non-antifrag part
 			if( BOOLSETTING(ANTI_FRAG) && (start == -1) ) {
 				int64_t aSize = File::getSize(target + Download::ANTI_FRAG_EXT);
@@ -85,6 +85,7 @@ Download::Download(UserConnection& conn, QueueItem& qi, bool supportsTrees) thro
 
 Download::~Download() {
 	getUserConnection().setDownload(0);
+	delete file;
 }
 
 AdcCommand Download::getCommand(bool zlib) {
